patient to shortname mapping done, still bugs to fix